--- a/index.html
+++ b/index.html
@@ -359,5 +359,9 @@
 		<script src="https://cdn.jsdelivr.net/jquery.goodshare.js/3.2.8/goodshare.min.js"></script>
 		<script src="js/custom.js"></script>
 		<script src="js/index.js"></script>
-	</body>
+	<!-- RedConnect -->
+<script id="rhlpscrtg" type="text/javascript" charset="utf-8" async="async"
+src="https://web.redhelper.ru/service/main.js?c=krovelcentrezakazy1"></script>
+
+<!--/RedConnect --></body>
 </html>
